--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -1,13 +1,3 @@
-<%
-  file_versions = @digital_object_component['file_versions'].select{|fv| fv['publish']}
-
-  published_external_documents = []
-  if @digital_object_component['external_documents'].length > 0
-    @digital_object_component['external_documents'].each do |exdoc|
-      published_external_documents.push(exdoc) if exdoc['publish'] === true
-    end
-  end
-%>
 <div class="title-pane">
   <div class="row-fluid">
     <div class="span3">
@@ -24,8 +14,8 @@
       <div id="">
         <ul class="nav nav-list as-nav-list">
           <li><a href="#summary"><%= I18n.t("digital_object_component._public.section.summary") %> <span class="icon-chevron-right"></span></a></li>
-          <% if file_versions.length > 0 %>
-            <li><a href="#file_versions"><%= I18n.t("file_version._plural") %> <span class="badge badge-info"><%= file_versions.length %></span><span class="icon-chevron-right"></span></a></li>
+          <% if @digital_object_component.published_file_versions.length > 0 %>
+            <li><a href="#file_versions"><%= I18n.t("file_version._plural") %> <span class="badge badge-info"><%= @digital_object_component.published_file_versions.length %></span><span class="icon-chevron-right"></span></a></li>
           <% end %>
           <% if @digital_object_component['dates'].length > 0 %>
             <li><a href="#dates"><%= I18n.t("date._plural") %> <span class="badge badge-info"><%= @digital_object_component['dates'].length %></span><span class="icon-chevron-right"></span></a></li>
@@ -33,8 +23,8 @@
           <% if @digital_object_component['extents'].length > 0 %>
             <li><a href="#extents"><%= I18n.t("extent._plural") %> <span class="badge badge-info"><%= @digital_object_component['extents'].length %></span><span class="icon-chevron-right"></span></a></li>
           <% end %>
-          <% if @digital_object_component['linked_agents'].length > 0 %>
-            <li><a href="#linked_agents"><%= I18n.t("agent._plural") %> <span class="badge badge-info"><%= @digital_object_component['linked_agents'].length %></span><span class="icon-chevron-right"></span></a></li>
+          <% if @digital_object_component.published_agents.length > 0 %>
+            <li><a href="#linked_agents"><%= I18n.t("agent._plural") %> <span class="badge badge-info"><%= @digital_object_component.published_agents.length %></span><span class="icon-chevron-right"></span></a></li>
           <% end %>
           <% if @digital_object_component['subjects'].length > 0 %>
             <li><a href="#subjects"><%= I18n.t("subject._plural") %> <span class="badge badge-info"><%= @digital_object_component['subjects'].length %></span><span class="icon-chevron-right"></span></a></li>
@@ -42,8 +32,8 @@
           <% if @digital_object_component['notes'].length > 0 %>
             <li><a href="#notes"><%= I18n.t("note._plural") %> <span class="badge badge-info"><%= @digital_object_component['notes'].length %></span><span class="icon-chevron-right"></span></a></li>
           <% end %>
-          <% if published_external_documents.length > 0 %>
-            <li><a href="#external_documents"><%= I18n.t("external_document._plural") %> <span class="badge badge-info"><%= published_external_documents.length %></span><span class="icon-chevron-right"></span></a></li>
+          <% if @digital_object_component.published_external_documents.length > 0 %>
+            <li><a href="#external_documents"><%= I18n.t("external_document._plural") %> <span class="badge badge-info"><%= @digital_object_component.published_external_documents.length %></span><span class="icon-chevron-right"></span></a></li>
           <% end %>
           <% if children? %>
             <li><a href="#components"><%= I18n.t("digital_object_component._public.section.components") %> <span class="badge badge-info"><%= children.length %></span><span class="icon-chevron-right"></span></a></li>
@@ -63,13 +53,13 @@
           </dl>
         </section>
 
-        <%= render :partial => "file_versions", :locals => {:file_versions => file_versions} %>
+        <%= render :partial => "file_versions", :locals => {:file_versions => @digital_object_component.published_file_versions} %>
         <%= render :partial => "dates", :locals => {:dates => @digital_object_component['dates']} %>
         <%= render :partial => "extents", :locals => {:extents => @digital_object_component['extents']} %>
-        <%= render :partial => "agents", :locals => {:linked_agents => @digital_object_component['linked_agents']} %>
+        <%= render :partial => "agents", :locals => {:linked_agents => @digital_object_component.published_agents} %>
         <%= render :partial => "subjects", :locals => {:subjects => @digital_object_component['subjects']} %>
         <%= render :partial => "notes", :locals => {:notes => @digital_object_component['notes']} %>
-        <%= render :partial => "external_documents", :locals => {:external_documents => published_external_documents} %>
+        <%= render :partial => "external_documents", :locals => {:external_documents => @digital_object_component.published_external_documents} %>
         <%= render :partial => "components", :locals => {:record_type => "digital_object_component"} %>
 
       </fieldset>
