--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -27,10 +27,19 @@
   </div>
 <% end %>
 
+<% unless templates["date_label"]%>
+
+  <% define_template "date_label", jsonmodel_definition(:date) do |form| %>
+    <%= form.label_and_select "label", form.possible_options_for("label") %>
+  <% end %>
+<% end %>
+
 <% define_template "date", jsonmodel_definition(:date) do |form| %>
   <div class="subrecord-form-fields">
     <div class="date-container">
-      <%= form.label_and_select "label", form.possible_options_for("label") %>
+
+      <% form.emit_template("date_label")%>
+
       <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
 
       <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => :conditionally %>
