--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -45,7 +45,7 @@
                   <div id="agent_name_<%= index %>" class="accordion-body collapse">
                     <%= read_only_view(name.to_hash) %>
                     <% if name['use_dates'].length > 0 %>
-                      <%= render :partial => "dates/show", :locals => { :dates => name['use_dates'], :context => readonly } %>
+                      <%= render :partial => "dates/show", :locals => { :dates => name['use_dates'], :section_id => "name_use_dates", :section_title => I18n.t("agent_name.use_dates"), :context => readonly } %>
                     <% end %>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
         <% end %>
 
         <% if @agent.dates_of_existence.length > 0 %>
-          <%= render :partial => "dates/show", :locals => { :dates => @agent.dates_of_existence, :context => readonly } %>
+          <%= render :partial => "dates/show", :locals => { :dates => @agent.dates_of_existence, :section_title => I18n.t("agent.dates_of_existence"), :context => readonly } %>
         <% end %>
 
         <% if !@agent['related_agents'].blank? %>
