--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -14,8 +14,7 @@
     </div>
   </section>
 
-  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates_of_existence", :section_id => "dates_of_existence", :template_erb => "dates/template", :template => "date", :heading_text => I18n.t("agent._frontend.section.dates_of_existence"), :template_overrides => "agents/date_labels"} %>
-  
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates_of_existence", :section_id => "dates_of_existence", :template_erb => "dates/template", :template => "existence_date", :heading_text => I18n.t("agent._frontend.section.dates_of_existence"), :template_overrides => {"date_label" => "agents/date_labels"}} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "names", :section_id => "names", :template_erb => "agents/name_forms/#{@agent.agent_type}", :template => "name_#{@agent.agent_type.to_s.gsub("agent_","")}" } %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "agent_contacts", :section_id => "contacts", :template_erb => "agents/contact_details", :template => "agent_contact" } %>
   <%= render :partial => "notes/form", :locals => {:form => form, :all_note_types => note_types_for(form['jsonmodel_type'])} %>
