--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -1,3 +1,10 @@
+<% 
+  overrides = false if overrides.blank?
+  Rails.logger.debug("OVERRIDES #{overrides.inspect}")
+  @o = overrides
+
+%>
+
 <% define_template "date_type_single", jsonmodel_definition(:date) do |form| %>
   <div class="inline-subform date-type-subform" data-date-type="single">
     <%= form.label_and_date "begin", {:required => true} %>
@@ -27,35 +34,54 @@
   </div>
 <% end %>
 
-<% unless templates["date_label"]%>
 
-  <% define_template "date_label", jsonmodel_definition(:date) do |form| %>
-    <%= form.label_and_select "label", form.possible_options_for("label") %>
-  <% end %>
+<% define_template "existence_date", jsonmodel_definition(:date) do |form| %>
+  <div class="subrecord-form-fields">
+    <div class="date-container">
+      <%= form.label_and_select "label", form.possible_options_for("label", false, :include => ["existence"]) %>
+      
+      <%form.emit_template("date_fields") %>
+    </div>
+  </div>
 <% end %>
+
+
+<% define_template "usage_date", jsonmodel_definition(:date) do |form| %>
+  <div class="subrecord-form-fields">
+    <div class="date-container">
+      <%= form.label_and_select "label", form.possible_options_for("label", false, :include => ["usage"]) %>
+      
+      <%form.emit_template("date_fields") %>
+    </div>
+  </div>
+<% end %>
+
 
 <% define_template "date", jsonmodel_definition(:date) do |form| %>
   <div class="subrecord-form-fields">
     <div class="date-container">
-
-      <% form.emit_template("date_label")%>
-
-      <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
-
-      <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => :conditionally %>
-
-      <% if !form.obj["date_type"].blank? %>
-        <% form.emit_template("date_type_#{form.obj["date_type"]}", form.obj) %>
-      <% elsif form.default_for("date_type") %>
-        <% form.emit_template("date_type_#{form.default_for("date_type")}") %>
-      <% else %>
-        <% form.emit_template("date_type_nil") %>
-      <% end %>
-
-      <%= form.label_and_select("certainty", form.possible_options_for("certainty", true)) %>
-      <%= form.label_and_select("era", form.possible_options_for("era", true)) %>
-      <%= form.label_and_select("calendar", form.possible_options_for("calendar", true)) %>
-
+      <%= form.label_and_select "label", form.possible_options_for("label") %>
+      
+      <%form.emit_template("date_fields") %>
     </div>
   </div>
+<% end %>
+
+
+<% define_template "date_fields", jsonmodel_definition(:date) do |form| %>
+  <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
+
+  <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => :conditionally %>
+
+  <% if !form.obj["date_type"].blank? %>
+    <% form.emit_template("date_type_#{form.obj["date_type"]}", form.obj) %>
+  <% elsif form.default_for("date_type") %>
+    <% form.emit_template("date_type_#{form.default_for("date_type")}") %>
+  <% else %>
+    <% form.emit_template("date_type_nil") %>
+  <% end %>
+
+  <%= form.label_and_select("certainty", form.possible_options_for("certainty", true)) %>
+  <%= form.label_and_select("era", form.possible_options_for("era", true)) %>
+  <%= form.label_and_select("calendar", form.possible_options_for("calendar", true)) %>
 <% end %>
