--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -8,6 +8,10 @@
 
     <li><a href="#agent_details"><%= I18n.t("agent._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
+    <% if not controller.action_name === "show" or @agent.dates_of_existence.length > 0 %>
+      <li><a href="#dates_of_existence"><%= I18n.t "agent.dates_of_existence" %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" or @agent.names.length > 0 %>
       <li><a href="#names"><%= I18n.t("agent_name._plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
@@ -26,10 +30,6 @@
 
     <% if not controller.action_name === "show" or @agent.external_documents.length > 0 %>
       <li><a href="#agent_external_documents_"><%= I18n.t "external_document._plural" %> <span class="icon-chevron-right"></span></a></li>
-    <% end %>
-    
-    <% if not controller.action_name === "show" or @agent.dates_of_existence.length > 0 %>
-      <li><a href="#dates"><%= I18n.t "agent.dates_of_existence" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name === "show" %>
