--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -25,7 +25,7 @@
 
       <%= readonly.emit_template "subject" %>
 
-      <%= render :partial => "terms/show", :locals => { :terms => @subject.terms} %>
+      <%= render :partial => "terms/show", :locals => { :terms => @subject.terms, :heading_text => I18n.t("subject._frontend.section.terms")} %>
 
       <% if @subject.external_documents.length > 0 %>
         <%= render :partial => "external_documents/show", :locals => { :external_documents => @subject.external_documents, :section_id => "subject_external_documents_" } %>
