--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -22,6 +22,12 @@
             data-multiplicity="one"
             data-types='["accession"]'
           />
+         <div class="btn-group dropdown pull-right">
+           <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
+           <ul class="dropdown-menu">
+             <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
+           </ul>
+         </div>
        </div>
    </div>
 </div>
