--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -1,20 +1,20 @@
 <% define_template "date_type_single", jsonmodel_definition(:date) do |form| %>
   <div class="inline-subform date-type-subform" data-date-type="single">
-    <%= form.label_and_date "begin", {:required => true} %>
+    <%= form.label_and_date "begin" %>
   </div>
 <% end %>
 
 <% define_template "date_type_inclusive", jsonmodel_definition(:date) do |form| %>
   <div class="inline-subform date-type-subform" data-date-type="inclusive">
-    <%= form.label_and_date "begin", {:required => true} %>
-    <%= form.label_and_date "end", {:required => true} %>
+    <%= form.label_and_date "begin" %>
+    <%= form.label_and_date "end" %>
   </div>
 <% end %>
 
 <% define_template "date_type_bulk", jsonmodel_definition(:date) do |form| %>
   <div class="inline-subform date-type-subform" data-date-type="bulk">
-    <%= form.label_and_date "begin", {:required => true} %>
-    <%= form.label_and_date "end", {:required => true} %>
+    <%= form.label_and_date "begin" %>
+    <%= form.label_and_date "end" %>
   </div>
 <% end %>
 
@@ -64,7 +64,7 @@
 <% define_template "date_fields", jsonmodel_definition(:date) do |form| %>
   <%= form.label_and_textarea "expression", {:field_opts => {:placeholder => "Describe the date or date range"}, :required => :conditionally} %>
 
-  <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => :conditionally %>
+  <%= form.label_and_select "date_type", form.possible_options_for("date_type", true), :required => true %>
 
   <% if !form.obj["date_type"].blank? %>
     <% form.emit_template("date_type_#{form.obj["date_type"]}", form.obj) %>
