Frontend changes for merging subjects together.

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -459,5 +459,17 @@ div.progress-container {
   }
 }
 
-/* end i-frame import workaround */
+.merge-form {
+  padding: 10px;
 
+  form {
+    margin: 0;
+  }
+  fieldset {
+    width: 300px;
+    padding: 10px;
+  }
+  .form-actions {
+    margin: 0;
+  }
+}
