--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -7,6 +7,9 @@
 
   data_path = form.path
   data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
+
+  exclude_ids = [] if exclude_ids.blank?
+  hide_create = false if hide_create.blank?
 %>
 
 <div class="control-group required">
@@ -20,17 +23,18 @@
             data-path="<%= data_path %>"
             data-name="<%= data_name %>"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.SUBJECT_FACETS, :sort => "title_sort asc" %>"
+            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.SUBJECT_FACETS, :sort => "title_sort asc", :exclude => exclude_ids %>"
             data-selected="<%= selected_json %>"
             data-format_template="title"
             data-multiplicity="one"
             data-types='["subject"]'
+            data-exclude='<%= exclude_ids.to_json %>'
           />
           <div class="btn-group pull-right">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
                  <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
-              <% if user_can?('update_subject_record') %>
+              <% if !hide_create && user_can?('update_subject_record') %>
                  <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :subjects, :action => :new, :inline => true %>" class="linker-create-btn"><%= I18n.t("actions.create") %></a></li>
               <% end %>
               </ul>
