Fix asset-path/url issues with new version of less-rails; Introduce 2.3.2 twitter bootstrap to the public app;

--- a/frontend/app/assets/stylesheets/archivesspace/rde.less
+++ b/frontend/app/assets/stylesheets/archivesspace/rde.less
@@ -32,7 +32,7 @@
     }
 
     .kiketable-colsizable-handler {
-      background-image: url(../archivesspace/drag_handle.png);
+      background-image: asset-url('archivesspace/drag_handle.png');
       border: none;
       width: 4px;
     }
