--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -269,7 +269,7 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   .agent_person .icon-token {background-position: -168px 0;}
   .agent_software .icon-token {background-position: -360px -144px;}
   .agent_corporate_entity .icon-token {background-position: -432px -144px;}
-  .agent_family .icon-token {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
+  .agent_family .icon-token {background-image: asset-url('archivesspace/icon-family.png'); background-position: 0 0;}
   .resource .icon-token {background-position: -264px -24px;}
   .archival_object .icon-token {background-position: -24px -24px;}
   .digital_object .icon-token {background-position: -384px -120px;}
