--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -146,7 +146,7 @@
       .ie7-restore-right-whitespace();
       line-height: 14px;
       vertical-align: text-top;
-      background-image: url(@iconSpritePath) !important;
+      background-image: asset-url(@iconSpritePath) !important;
       background-position: 14px 14px;
       background-repeat: no-repeat;
     }
