--- a/frontend/app/assets/stylesheets/themes/default/default.less
+++ b/frontend/app/assets/stylesheets/themes/default/default.less
@@ -1,7 +1,7 @@
 @baseFontSize: 13px;
 
 body {
-  background: #e9e9e9 url(bg_body.png) repeat top left;
+  background: #e9e9e9 asset-url('themes/default/bg_body.png') repeat top left;
 }
 
 .content-pane {
