--- a/public/app/assets/stylesheets/themes/default/default.less
+++ b/public/app/assets/stylesheets/themes/default/default.less
@@ -1,7 +1,7 @@
 @baseFontSize: 13px;
 
 body {
-  background: #FFFFFF url(bg_body.png) repeat top left;
+  background: #FFFFFF asset-url('themes/default/bg_body.png') repeat top left;
 }
 
 header h1 {
