--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -154,7 +154,7 @@ section {
 .icon-agent_person {background-position: -168px 0;}
 .icon-agent_software {background-position: -360px -144px;}
 .icon-agent_corporate_entity {background-position: -432px -144px;}
-.icon-agent_family {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
+.icon-agent_family {background-image: asset-url('archivesspace/icon-family.png'); background-position: center center;}
 .icon-resource {background-position: -264px -24px;}
 .icon-archival_object {background-position: -24px -24px;}
 .icon-digital_object {background-position: -384px -120px;}
