--- a/public/app/views/site/_branding.html.erb
+++ b/public/app/views/site/_branding.html.erb
@@ -1,3 +1,3 @@
 <h1>
-  <%= image_tag "archivesspace.png", :alt => I18n.t("brand.title") %>
+  <%= image_tag "archivesspace/archivesspace.png", :alt => I18n.t("brand.title") %>
 </h1>
