--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -11,6 +11,7 @@
 
    linkable_types = defined?(allowed_types) ? allowed_types : ["agent"]
    creatable_types = defined?(allowed_types) ? allowed_types : ["agent_person", "agent_family", "agent_corporate_entity", "agent_software"]
+  hide_create = false if hide_create.blank?
 %>
 <div class="control-group <% if required %> required <% end %>">
   <label class="control-label"><%= defined?(linker_label) ? linker_label : I18n.t("agent._singular") %></label>
@@ -35,7 +36,9 @@
           <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
           <% if user_can?('update_agent_record') %>
             <li class="dropdown-submenu pull-left">
+              <% if !hide_create && user_can?('update_agent_record') %>
               <a href="javascript:void(0);"><%= I18n.t("actions.create") %></a>
+              <% end %>
               <ul class="dropdown-menu">
                 <% creatable_types.each do |agent_type| %>
                 <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :agent_type => agent_type.intern, :inline => true %>" class="linker-create-btn"><%= I18n.t("#{agent_type}._singular") %></a></li>
