--- a/frontend/app/views/agents/_toolbar.html.erb
+++ b/frontend/app/views/agents/_toolbar.html.erb
@@ -7,6 +7,7 @@
             <%= link_to I18n.t("actions.edit"), {:controller => :agents, :action => :edit, :id => @agent.id, :agent_type => @agent.agent_type}, :class => "btn btn-small btn-primary" %>
           </div>
 
+          <% if user_can?('merge_agent_record') %>
           <%=
              render :partial => "shared/merge_dropdown",
                     :locals => {:record => @agent,
@@ -16,6 +17,7 @@
                                 :confirmation_msg => I18n.t("actions.merge_agent_confirm_message",
                                                             :target => @agent.title)}
           %>
+          <% end %>
 
         <% end %>
         <% if ['new', 'create', 'edit', 'update'].include?(controller.action_name) %>
