--- a/frontend/app/views/subjects/_toolbar.html.erb
+++ b/frontend/app/views/subjects/_toolbar.html.erb
@@ -7,6 +7,7 @@
             <%= link_to I18n.t("actions.edit"), {:controller => :subjects, :action => :edit, :id => @subject.id}, :class => "btn btn-small btn-primary" %>
           </div>
 
+          <% if user_can?('merge_subject_record') %>
           <%=
              render :partial => "shared/merge_dropdown",
                     :locals => {:record => @subject,
@@ -15,7 +16,7 @@
                                 :confirmation_msg => I18n.t("actions.merge_subject_confirm_message",
                                                             :target => @subject.title)}
           %>
-
+          <% end %>
 
         </div>
         <div class="btn-group pull-right">
