--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -464,3 +464,13 @@ pre {
     display: none;
   }
 }
+
+#component_switch {
+  border-bottom: 1px @hrBorder solid;
+  padding: @baseLineHeight/2 0;
+  margin-bottom: @baseLineHeight;
+
+  #component_switch_checkbox {
+    margin: 0;
+  }
+}
