--- a/public/app/views/records/archival_object.html.erb
+++ b/public/app/views/records/archival_object.html.erb
@@ -1,10 +1,15 @@
+<%
+   record_title = @archival_object.title
+   set_title(record_title)
+%>
+
 <div class="title-pane">
   <div class="row-fluid">
     <div class="span3">
 
     </div>
     <div class="span9">
-      <h2><%= @archival_object.title %></h2>
+      <h2><%= record_title %></h2>
     </div>
   </div>
 </div>
