--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -1,11 +1,14 @@
+<%
+  record_title = @resource['finding_aid_status'] === "completed" ? @resource['finding_aid_title'] : @resource.title
+  set_title(record_title)
+%>
 <div class="title-pane">
   <div class="row-fluid">
     <div class="span3">
 
     </div>
     <div class="span9">
-      <h2>
-      <%= @resource['finding_aid_status'] === "completed" ? @resource['finding_aid_title'] : @resource.title %></h2>
+      <h2><%= record_title %></h2>
     </div>
   </div>
 </div>
