--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -31,7 +31,7 @@
 
 <% form.emit_template("accession") %>
 
-<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :template => "archival_record_date"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "accession_linked_agent"} %>
