--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -35,7 +35,7 @@
 
   <% form.emit_template("archival_object") %>
   
-  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :required => :conditionally} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :required => :conditionally, :template => "archival_record_date"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "archival_object_linked_agent"} %>
