--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -50,6 +50,17 @@
 <% end %>
 
 
+<% define_template "archival_record_date", jsonmodel_definition(:date) do |form| %>
+  <div class="subrecord-form-fields">
+    <div class="date-container">
+      <%= form.label_and_select "label", form.possible_options_for("label"), :field_opts => {:default => "creation"} %>
+
+      <%form.emit_template("date_fields") %>
+    </div>
+  </div>
+<% end %>
+
+
 <% define_template "date", jsonmodel_definition(:date) do |form| %>
   <div class="subrecord-form-fields">
     <div class="date-container">
