--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -8,27 +8,27 @@
 
     <li><a href="#agent_details"><%= I18n.t("agent._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
-    <% if not controller.action_name === "show" or @agent.dates_of_existence.length > 0 %>
+    <% if controller.action_name != "show" or @agent.dates_of_existence.length > 0 %>
       <li><a href="#dates_of_existence"><%= I18n.t "agent.dates_of_existence" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @agent.names.length > 0 %>
+    <% if controller.action_name != "show" or @agent.names.length > 0 %>
       <li><a href="#names"><%= I18n.t("agent_name._plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @agent.agent_contacts.length > 0 %>
+    <% if controller.action_name != "show" or @agent.agent_contacts.length > 0 %>
       <li><a href="#contacts"><%= I18n.t("agent_contact._plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @agent.notes.length > 0 %>
+    <% if controller.action_name != "show" or @agent.notes.length > 0 %>
       <li><a href="#notes"><%= I18n.t("note._plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or !@agent['related_agents'].blank? %>
+    <% if controller.action_name != "show" or !@agent['related_agents'].blank? %>
       <li><a href="#related_agents"><%= I18n.t("related_agent._plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @agent.external_documents.length > 0 %>
+    <% if controller.action_name != "show" or @agent.external_documents.length > 0 %>
       <li><a href="#agent_external_documents_"><%= I18n.t "external_document._plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
@@ -36,7 +36,7 @@
       <li><a href="#search_embedded"><%= I18n.t("agent._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <li class="form-actions">
         <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
           <button type="submit" class="btn btn-primary"><%= I18n.t("#{@agent.agent_type}._frontend.action.save") %></button>
