--- a/frontend/app/views/classification_terms/_sidebar.html.erb
+++ b/frontend/app/views/classification_terms/_sidebar.html.erb
@@ -12,7 +12,7 @@
       <li><a href="#search_embedded"><%= I18n.t("classification_term._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <div class="form-actions">
         <% if @classification_term.id.blank? %>
           <div class="btn-group btn-submit-group">
