--- a/frontend/app/views/classifications/_sidebar.html.erb
+++ b/frontend/app/views/classifications/_sidebar.html.erb
@@ -12,7 +12,7 @@
       <li><a href="#search_embedded"><%= I18n.t("classification._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary"><%= I18n.t("classification._frontend.action.save") %></button>
       </li>
