--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -28,19 +28,19 @@
       <li><a href="#digital_object_component_subjects_"><%= I18n.t("subject._singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @digital_object_component.notes.length > 0 %>
+    <% if controller.action_name != "show" or @digital_object_component.notes.length > 0 %>
       <li><a href="#notes"><%= I18n.t("note._singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @digital_object_component.external_documents.length > 0 %>
+    <% if controller.action_name != "show" or @digital_object_component.external_documents.length > 0 %>
       <li><a href="#digital_object_component_external_documents_"><%= I18n.t("external_document._singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @digital_object_component.rights_statements.length > 0 %>
+    <% if controller.action_name != "show" or @digital_object_component.rights_statements.length > 0 %>
       <li><a href="#digital_object_component_rights_statements_"><%= I18n.t("rights_statement._singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <div class="form-actions">
         <% if @digital_object_component.id.blank? %>
           <div class="btn-group btn-submit-group">
