--- a/frontend/app/views/locations/_sidebar.html.erb
+++ b/frontend/app/views/locations/_sidebar.html.erb
@@ -12,7 +12,7 @@
       <li><a href="#search_embedded"><%= I18n.t("location._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <li class="form-actions">
         <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
           <button type="submit" class="btn btn-primary"><%= I18n.t("location._frontend.action.save") %></button>
