--- a/frontend/app/views/repositories/_sidebar.html.erb
+++ b/frontend/app/views/repositories/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <li><a href="#all_fields"><%= I18n.t("repository._frontend.section.all_fields") %> <span class="icon-chevron-right"></span></a></li>
     <li><a href="#agent_contact"><%= I18n.t("agent_contact._plural") %> <span class="icon-chevron-right"></span></a></li>
 
-    <% if not controller.action_name === "show" %>
+    <% if controller.action_name != "show" %>
       <li class="form-actions">
         <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
           <button type="submit" class="btn btn-primary"><%= I18n.t("repository._frontend.action.save") %></button>
