--- a/frontend/app/views/shared/_sidebar_entry.html.erb
+++ b/frontend/app/views/shared/_sidebar_entry.html.erb
@@ -1,3 +1,11 @@
-<% if controller.action_name != "show" or !record[property].blank? %>
-  <li><a href="#<%= record_type %>_<%= property %>_"><%= I18n.t "#{subrecord_type}._plural" %> <span class="icon-chevron-right"></span></a></li>
+<%
+   if !defined?(anchor)
+     anchor = (property == :none) ? subrecord_type : "#{record_type}_#{property}_"
+   end
+   title = I18n.t("#{subrecord_type}._plural",
+                  :default => I18n.t("#{record_type}._frontend.section.#{subrecord_type}"))
+%>
+
+<% if controller.action_name != "show" || property == :none || !record[property].blank? %>
+  <li><a href="#<%= anchor %>"><%= title %> <span class="icon-chevron-right"></span></a></li>
 <% end %>
