Round 6 against the agent sidebar

--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -3,7 +3,7 @@
 <%= render :partial => "agents/contact_details", :locals => {:form => form} %>
 
 <fieldset>
-  <section id="agent_details">
+  <section id="basic_information">
     <h3><%= I18n.t("agent._frontend.section.basic_information") %></h3>
     <div class="control-group">
       <label class="control-label"><%= I18n.t("agent.type") %></label>
