--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -13,7 +13,7 @@
         <%= render :partial => "shared/flash_messages" %>
 
         <div class="row-fluid">
-          <section id="agent_details">
+          <section id="basic_information">
             <h3><%= I18n.t("agent._frontend.section.basic_information") %></h3>
 
             <div class="control-group">
