--- a/frontend/app/views/shared/_sidebar.html.erb
+++ b/frontend/app/views/shared/_sidebar.html.erb
@@ -1,5 +1,8 @@
 <%
   plusone = defined?(plusone) ? plusone : false
+  if !defined?(save_button_text)
+    save_button_text = I18n.t("#{record_type}._frontend.action.save")
+  end
 %>
 
 <div id="archivesSpaceSidebar">
@@ -24,11 +27,11 @@
       <li class="form-actions">
         <% if plusone && record.id.blank? %>
           <div class="btn-group btn-submit-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("archival_object._frontend.action.save") %></button>
+            <button type="submit" class="btn btn-primary"><%= save_button_text %></button>
             <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
         <% else %>
-          <button type="submit" class="btn btn-primary"><%= I18n.t("#{record_type}._frontend.action.save") %></button>
+          <button type="submit" class="btn btn-primary"><%= save_button_text %></button>
         <% end %>
       </li>
     <% end %>
