Round 9 against the batch location sidebar

--- a/frontend/app/views/locations/_sidebar_batch.html.erb
+++ b/frontend/app/views/locations/_sidebar_batch.html.erb
@@ -1,13 +1,14 @@
-<div id="archivesSpaceSidebar">
-  <ul class="nav nav-list as-nav-list">
-    <% if @exceptions %>
-      <li class="<% if @exceptions.has_key?(:errors)%>alert-error<% end %>">
-        <a href="#form_messages"><%= I18n.t("errors.sidebar_label") %>   <span class="icon-chevron-right"></span></a>
-      </li>
-    <% end %>
+<%= render(:layout => '/shared/sidebar',
+           :locals => {
+             :record_type => 'location_batch',
+             :record => {},
+             :suppress_basic_information => true,
+             :suppress_submit_buttons => true,
+           }) do |sidebar| %>
 
-    <li><a href="#location"><%= I18n.t("location_batch._frontend.section.location") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#ranges"><%= I18n.t("location_batch._frontend.section.ranges") %> <span class="icon-chevron-right"></span></a></li>
+
+    <%= sidebar.render_for_view_and_edit(:subrecord_type => 'location', :property => :none, :anchor => 'location') %>
+    <%= sidebar.render_for_view_and_edit(:subrecord_type => 'ranges', :property => :none, :anchor => 'ranges') %>
 
     <li class="form-actions">
       <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
@@ -15,5 +16,4 @@
         <button type="button" class="btn preview-locations" style="width: 30%;"><%= I18n.t("location_batch._frontend.action.preview_short") %></button>
       </div>
     </li>
-  </ul>
-</div>
+<% end %>
