--- a/frontend/app/views/shared/_sidebar.html.erb
+++ b/frontend/app/views/shared/_sidebar.html.erb
@@ -13,27 +13,31 @@
       </li>
     <% end %>
 
-    <li>
-      <a href="#basic_information">
-        <%= I18n.t("#{record_type}._frontend.section.basic_information") %>
-        <span class="icon-chevron-right"></span>
-      </a>
-    </li>
+    <% unless defined?(suppress_basic_information) && suppress_basic_information %>
+      <li>
+        <a href="#basic_information">
+          <%= I18n.t("#{record_type}._frontend.section.basic_information") %>
+          <span class="icon-chevron-right"></span>
+        </a>
+      </li>
+    <% end %>
 
     <%= yield(SidebarHelper::SidebarGenerator.new(self, {:record => record, :record_type => record_type})) %>
 
 
-    <% if controller.action_name != "show" %>
-      <li class="form-actions">
-        <% if plusone && record.id.blank? %>
-          <div class="btn-group btn-submit-group">
+    <% unless defined?(suppress_submit_buttons) && suppress_submit_buttons %>
+      <% if controller.action_name != "show" %>
+        <li class="form-actions">
+          <% if plusone && record.id.blank? %>
+            <div class="btn-group btn-submit-group">
+              <button type="submit" class="btn btn-primary"><%= save_button_text %></button>
+              <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
+            </div>
+          <% else %>
             <button type="submit" class="btn btn-primary"><%= save_button_text %></button>
-            <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
-          </div>
-        <% else %>
-          <button type="submit" class="btn btn-primary"><%= save_button_text %></button>
-        <% end %>
-      </li>
+          <% end %>
+        </li>
+      <% end %>
     <% end %>
   </ul>
 </div>
