The plus one button needs to submit in some cases but not others

--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -2,7 +2,7 @@
            :locals => {
              :record_type => 'archival_object',
              :record => @archival_object,
-             :plusone => true
+             :plusone => :button
            }) do |sidebar| %>
 
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'date', :property => 'dates') %>
