--- a/frontend/app/views/events/_sidebar.html.erb
+++ b/frontend/app/views/events/_sidebar.html.erb
@@ -2,7 +2,7 @@
            :locals => {
              :record_type => 'event',
              :record => @event,
-             :plusone => true
+             :plusone => :submit
            }) do |sidebar| %>
 
 
