Change the ID of the sidebar createPlusOne button so they don't conflict.  Use a class to refer to them in the JS.

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -262,7 +262,7 @@ section h3 {
     button:first-child {
       width: 80%;
     }
-    #createPlusOne {
+    .createPlusOneBtn {
       width: 20%;
     }
   }
