--- a/frontend/app/views/digital_object_components/_new_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_new_inline.html.erb
@@ -11,7 +11,7 @@
           <div class="form-actions">
             <div class="btn-group btn-submit-group">
               <button type="submit" class="btn btn-primary"><%= I18n.t("digital_object_component._frontend.action.save") %></button>
-              <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
+              <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one createPlusOneBtn"><%= I18n.t("actions.save_plus_one") %></button>
             </div>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
           </div>
